[package]
name = "mirror-config"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.196"
serde_derive = "1.0.196"
serde_json = "1.0.113"
serde_yaml = "0.9.31"

[lib]
name = "mirror_config"
path = "src/lib.rs"

